Link new pages and fix nav spacing

--- a/csspages/montage.css
+++ b/csspages/montage.css
@@ -39,24 +39,25 @@ header a{
     margin-left: -15px;
 }
 
-ul{
-    list-style: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 50px;
+.navul{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     text-transform: uppercase;
+    list-style: none;
+    gap: 20px 35px;
 }
 
-ul a{
-    color: white;
+.navul a{
+    color: rgba(255, 255, 255, 0.642);
     font-size: 0.9rem;
+    transition: ease-in-out 0.3s;
+    padding:  5px 10px;
+    border: 1px solid #10828d;
 }
 
-ul li:hover{
-    transform: scale(1.1);
-    transition: ease-in-out 0.3s;
+.navul a:hover{
+    border: 1px solid white;
+    color: white;
 }
 
 /*====Mobile Menu====*/
@@ -94,17 +95,24 @@ ul li:hover{
     flex-direction: column;
     background-color:#10828d;
     width: 200px;
-    height: 400px;
+    height: 450px;
 }
 
 .mobile-menu{
     display: none;
     position: absolute;
+    gap: 37px;
     top: 80px;
     right: 0px;
-    height: calc(100vh - 50px);
     width: 100%;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+} 
+
+.mobile-menu li, li a{
+    list-style: none;
+    color: white;
 }
 
 /*====Main Body====*/
@@ -304,11 +312,6 @@ ul li:hover{
         top: 60px;
     }
 
-    ul {
-        font-size: 0.9em;
-        font-weight: 400;
-    }
-
     .mainbody{
         padding: 20px;
         margin-top: -10px;
@@ -436,11 +439,6 @@ ul li:hover{
         top: 60px;
     }
 
-    ul {
-        font-size: 0.9em;
-        font-weight: 400;
-    }
-
     .mainbody{
         padding: 50px;
         margin-top: -40px;
@@ -559,11 +557,6 @@ ul li:hover{
         display: block;
     }
 
-    ul {
-        font-size: 0.9em;
-        font-weight: 400;
-    }
-
     .mainbody{
         padding: 50px;
         margin-top: -10px;
@@ -672,11 +665,6 @@ ul li:hover{
         display: block;
     }
 
-    ul {
-        font-size: 0.9em;
-        font-weight: 400;
-    }
-
     .mainbody{
         padding: 50px;
         margin-top: -10px;
@@ -766,12 +754,13 @@ ul li:hover{
         font-size: 1.7rem;
     }
 
-    ul {
-        font-weight: 400;
-        gap: 35px;
+    .navul{
+        gap: 10px 0px;
+        padding-left: 10px;
+        margin-right: -10px;
     }
 
-    ul a{
+    .navul a{
         font-size: 0.8rem;
     }
 
@@ -840,9 +829,13 @@ ul li:hover{
         font-size: 1.9rem;
     }
 
-    ul a{
-        font-size: 0.8rem;
+    .navul{
+        gap: 10px 8px;
     }
+
+    .navul a{
+        font-size: 0.8rem;
+    } 
 
     .mainbody{
         padding: 50px;
@@ -877,4 +870,14 @@ ul li:hover{
         margin-top: 50px;
     }
 
+}
+
+@media screen and (min-width:1190px) and (max-width:1255px){
+    .navul{
+        gap: 13px;
+    }
+
+    .navul a{
+        font-size: 0.8rem;
+    }
 }
