--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header a{
 
 
 
-ul{
+.navul{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     text-transform: uppercase;
@@ -53,16 +53,17 @@ ul{
     gap: 20px 35px;
 }
 
-ul a{
-    color: white;
+.navul a{
+    color: rgba(255, 255, 255, 0.642);
     font-size: 0.9rem;
     transition: ease-in-out 0.3s;
     padding: 5px 10px;
     border: 1px solid #10828d;
 }
 
-ul a:hover{
+.navul a:hover{
     border: 1px solid white;
+    color: white;
 }
 
 /*====Mobile Menu====*/
@@ -106,13 +107,19 @@ ul a:hover{
 .mobile-menu{
     display: none;
     position: absolute;
-    text-align: center;
     gap: 37px;
     top: 90px;
     right: 0px;
     width: 100%;
     padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
 } 
+
+.mobile-menu li, li a{
+    list-style: none;
+    color: white;
+}
 
 
 /*====The body====*/
@@ -842,11 +849,11 @@ ul a:hover{
         font-size: 1.8rem;
     }
 
-    ul{
+    .navul{
         gap: 10px 0;
     }
 
-    ul a{
+    .navul a{
         font-size: 0.7rem;
     }
 
@@ -894,11 +901,11 @@ ul a:hover{
         font-size: 1.9rem;
     }
 
-    ul{
+    .navul{
         gap: 15px;
     }
 
-    ul a{
+    .navul a{
         font-size: 0.8rem;
     }
 
